# Trade

./: .gitignore  AGENTS.md  CLAUDE.md  Plan.md  Project.md  README.md  llm_client_test.py  llm_test.py  需求.md
completetask/: 2026-04-03.md
trade-strategy-ai/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
trade-strategy-ai/cli/: crawl.py  main.py  migrate.py
trade-strategy-ai/config/: app.example.yaml  app.yaml  database.py  settings.py
trade-strategy-ai/data/processed/persona/: 510300.SH_daily.csv  clusters.real.json  clusters.sample.json  market_state.json
trade-strategy-ai/doc/: README.md
trade-strategy-ai/docs/: architecture.md
trade-strategy-ai/prompts/: concept_extraction.md  dsl_generation.md  precondition_extraction.md  rule_extraction.md
trade-strategy-ai/scripts/: db_check.py  init_db.py
trade-strategy-ai/src/agents/: base.py
trade-strategy-ai/src/common/: akshare_tool.py  config.py  exceptions.py  logger.py  utils.py
trade-strategy-ai/src/db/: session.py
trade-strategy-ai/src/host/: __init__.py  contracts.py  handler.py
trade-strategy-ai/src/llm/: __init__.py  client.py
trade-strategy-ai/src/models/: __init__.py  article_metadata.py  base.py  blog_article.py  market_data.py  trade_log.py
trade-strategy-ai/src/persona/: __init__.py  claim_keys.py  cluster_builder.py  market_state.py  router.py  sample.py  schemas.py  storage.py
trade-strategy-ai/src/pipeline/: __init__.py  dag.py  scheduler.py  validation.py
trade-strategy-ai/src/reporting/: html_reports.py
trade-strategy-ai/src/schemas/: contracts.py
(+56 files in other folders)
