[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "trade-strategy-ai"
version = "0.1.0"
description = "AI 交易策略反推与 Agent 系统"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "duckdb>=0.10",
    "redis>=5.0",
    # Data
    "pandas>=2.2",
    "polars>=0.20",
    "pyarrow>=15.0",
    # Crawling
    "playwright>=1.42",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    # AI/ML
    "openai>=1.12",
    "anthropic>=0.18",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    # DSL
    "lark>=1.1",
    # Backtest
    "backtesting>=0.3",
    # Utils
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.9",
    "structlog>=24.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
